2011-02-23  Ernesto Baschny  <ernst@cron-it.de>

	* Updated ext_emconf.php for several changed sysext's
	* Merged Linkvalidator 1.0.1 to be included in 4.5.1 (Thanks to Michael Miousse and Christopher Stelmaszyk). Includes these fixes:
	* Fixed Bug #f12649: Linkvalidator: Split up analyzeRecord()
	* Fixed bug #f12652: Linkvalidator: If none of the link types are marked to be checked, all of them are checked
	* Fixed bug #f12650: Linkvalidator: tx_linkvalidator_tasks_validator: exec() is too long
	* Fixed bug #f12454: Linkvalidator: Use setting "defaultMailFromName" and "defaultMailFromAddress"
	* Fixed bug #f12517: Linkvalidator: Replace exec_SELECTgetRows with exec_SELECTgetSingleRow whenever a single record is expected (thanks to Jo Hasenau)
	* Fixed bug #f12549: Linkvalidator: Unify capitalization of language labels

2011-02-23  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #17511: tx_install_session::write doesn't fix permissions
	* Synchronized external repositories of version (tag 4.5.1) and workspaces (tag 4.5.1)

2011-02-23  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16636: Suggest wizard does not work with drop-down select fields

2011-02-22  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #16656: ImageMagick does not work with quotes in exec() path on Windows

2011-02-22  Stefan Galinski  <stefan.galinski@gmail.com>

	* Fixed bug #17483: GifBuilder - meaningfulTempFilePrefix can cause invalid image urls
	* Fixed bug #17531: htmlMail - Can't send mails on port based systems with Swiftmailer substitution
	* Fixed bug #17452: options.hideRecords.pages is ignored in page tree (Thanks to Andreas Kiessling)
	* Fixed bug #17457: Pagetree - User Mount Points are always expanded
	* Fixed bug #17479: javascript error after contextmenu -> delete a page

2011-02-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17695: htmlArea RTE: Removing format may remove content

2011-02-22  Tobias Liebig  <mail_typo3@etobi.de>
