@@ -1,5 +1,6 @@
 2011-02-23  Ernesto Baschny  <ernst@cron-it.de>
 
+	* Fixed bug #17314: Swift_RfcComplianceException is always thrown in t3lib_formmail when forceReturnPath=1 is set
 	* Updated ext_emconf.php for several changed sysext's
 	* Merged Linkvalidator 1.0.1 to be included in 4.5.1 (Thanks to Michael Miousse and Christopher Stelmaszyk). Includes these fixes:
 	* Fixed Bug #f12649: Linkvalidator: Split up analyzeRecord()
